--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>SoDex</groupId>
     <artifactId>note_java</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>log_demo</module>
+    </modules>
     <name>note_java</name>
 
     <build>
@@ -19,13 +23,9 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>27.0.1-jre</version>
-        </dependency>
 
     </dependencies>
+
     <profiles>
         <profile>
             <id>jdk-1.8</id>
@@ -38,9 +38,6 @@
                 <maven.compiler.target>1.8</maven.compiler.target>
                 <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
             </properties>
-
         </profile>
-
     </profiles>
-
 </project>
